--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: Build and Publish Docker Image to Docker Hub
 
 on:
   push:
-    branches: ['master']
+    branches: ['main']
 
 jobs:
   build:
