--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,13 +12,13 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASS }}
-
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/flask-actions-cicd
-
-      - name: Docker Push
-        run: docker push ${{ secrets.DOCKER_USER }}/flask-actions-cicd
+          
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USER }}/flask-actions-cicd:latest
