--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,3 +22,9 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKER_USER }}/flask-actions-cicd:latest
+          
+          
+      - name: docker images
+        run: |
+          docker images
+        
